Fixed z-index for logo

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -8,11 +8,14 @@
   z-index: 99999;
 }
 
+.main-navigation__logo--container {
+  z-index: 9999999;
+}
+
 .main-navigation__logo {
   width: 6rem;
   height: 6rem;
   margin-right: 3rem;
-  z-index: 99999999;
 }
 
 .main-navigation__logo--open {
